bin_PROGRAMS = validate parser typestrip


# list of all source files

validate_SOURCES := Action.cc DebugWriteController.cc Environment.cc \
FuncExp.cc Ownership.cc Plan.cc Proposition.cc State.cc Validator.cc \
main.cc pddl+lex.ll pddl+.yy ptree.cc typecheck.cc
parser_SOURCES := DebugWriteController.cc parse.cc pddl+lex.ll ptree.cc \
pddl+.yy
typestrip_SOURCES := TypeStrip.cc TypeStripWC.cc pddl+lex.ll ptree.cc \
typecheck.cc pddl+.yy


