AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(validate, 1.0)

dnl Process this file with autoconf to produce a 
configure script.
AC_INIT(Action.cc)

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_YACC
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_MAKE_SET


dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)

